--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "ios:simulator": "npm run ios -- --simulator='iPhone SE (3rd generation) (C6498D06-AB1C-4ABD-BB22-6F742B2A34E7)'"
   },
   "dependencies": {
     "react": "18.2.0",
